<resources>
    <string name="app_name">PUG</string>
    <string name="pick_up_games">ick</string>
    <string name="desc">Working life is a mess</string>
    <string name="cool_stuff">But with PUG it has never been easier to get active</string>
    <string name="get_started">GET STARTED</string>

    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="logout">logout</string>
    <string name="upcoming_activities">UPCOMING\nACTIVITIES</string>
    <string name="desc_upcoming_activities">What you have signed up for</string>
    <string name="new_activities">NEW\nACTIVITIES</string>
    <string name="desc_new_activities">Activities you might want to join</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_activities">YOUR ACTIVITIES</string>
    <string name="events_you_organized">Events you organized</string>
    <string name="past_activities">PAST ACTIVITIES</string>
    <string name="age">Age</string>
    <string name="username_or_email">Username or email</string>
    <string name="organise_activity">Organise Activity&#8230;</string>
    <string name="select_sport">Select Sport&#8230;</string>
    <string name="select_location">Select Location&#8230;</string>
    <string name="start_time">Start Time</string>
    <string name="hour">Hour</string>
    <string name="min">Min</string>
    <string name="location">Location</string>
    <string name="participants">Participants</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="confirm">Confirm</string>
    <string name="badminton">Badminton</string>
    <string name="cycling">Cycling</string>
    <string name="search">Search&#8230;</string>

    <string name="edit">Edit Profile</string>
    <string name="edit_profile">Edit\nProfile</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="number_of_activities_joined">X</string>
    <string name="number_of_activities_organised">X</string>
    <string name="number_of_different_activities_tried">X</string>
    <string name="activities_joined">Activities\nJoined</string>
    <string name="activities_organised">Activities\nOrganised</string>
    <string name="different_activities_tried">Different\nActivities Tried</string>
    <string name="remember_me">Remember Me</string>
    <string name="select_num_participants">Select Number of Participants&#8230;</string>
    <string name="desc_activity">Description of Activity</string>
    <string name="date">Date</string>

    <string name="required_fields">Required Fields</string>
    <string name="filter_by">Filter By&#8230;</string>
    <string name="sport">Sport</string>
    <string name="near_me">Near Me</string>
    <string name="change_profile_information">Change your profile information here</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="change_name">Change Name</string>
    <string name="end_time">End Time</string>
    <string name="hour_end">End Hour</string>
    <string name="min_end">End Min</string>

    <string name="start_time_error">Please set the Start Time correctly</string>
    <string name="time_error">Please set the Start and End Time correctly</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Enter your email and follow the instructions from there.</string>
    <string name="reset_password">reset password</string>
    <string name="enter_your_email">Enter Your Email&#8230;</string>
    <string name="friends">friends</string>
    <string name="no_activities_joined">You haven\'t signed up for any events! Organise your own or join others</string>
    <string name="load_new_activities">Please refresh to load new activities</string>
    <string name="pin_to_calendar">Pin to\nCalendar</string>
    <string name="delete">Delete</string>

    <string-array name="sport_array">
        <item>Badminton</item>
        <item>Cycling</item>
        <item>Table Tennis</item>
        <item>Volleyball</item>
        <item>Running</item>
    </string-array>

    <string-array name="location_array">
        <item>East Coast Park</item>
        <item>Ang Mo Kio - Bishan Park</item>
        <item>The Cage @ Kallang</item>
        <item>OCBC Arena, Singapore Sports Hub</item>
        <item>Kallang Tennis Centre</item>
        <item>Kallang Squash Centre</item>
        <item>Kallang Netball Centre</item>
        <item>Tampines Hub</item>
        <item>Hougang CC</item>
        <item>Sentosa</item>
    </string-array>
</resources>