<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/upcoming_activities" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/desc_upcoming_activities" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_rc"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/new_activities" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/desc_new_activities" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/new_rc"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</ScrollView>