<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ralewayextrabold"
            android:text="@string/upcoming_activities"
            android:textColor="@color/colorRed"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/upcoming_activities" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:text="@string/desc_upcoming_activities"
            android:textColor="@color/colorRed"
            android:textSize="13sp"
            app:fontFamily="@font/ralewaysemibold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_rc"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/your_activities" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/events_you_organized" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/events_rc"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/past_activities" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/past_rc"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>

</ScrollView>