<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/UserAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="UserAvatar"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:gravity="center"
        android:text="@string/name"
        style="@style/header"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserAvatar"/>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ProfileInformation"
        app:layout_constraintTop_toBottomOf="@+id/UserName">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:backgroundTint="@color/colorBlueAccent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/NumberOfActivitiesJoined"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/number_of_activities_joined" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/ActivitiesJoined"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/activities_joined" />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:backgroundTint="@color/colorRedAccent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/NumberOfActivitiesOrganised"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/number_of_activities_organised" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/ActivitiesOrganised"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/activities_organised" />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:backgroundTint="@color/colorBlueAccent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/NumberOfDifferentActivitiesTried"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/number_of_different_activities_tried" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/DifferentActivitiesTried"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/different_activities_tried" />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>



    <View
        android:id="@+id/profile_line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF0000"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout"/>

    <Button
        android:id="@+id/ProfileInformation"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile_information"
        app:layout_constraintTop_toBottomOf="@id/profile_line1"/>

    <View
        android:id="@+id/profile_line2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF0000"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/ProfileInformation"/>

    <Button
        android:id="@+id/NotificationPreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/notification_preferences"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/profile_line2"/>

    <View
        android:id="@+id/profile_line3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF0000"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/NotificationPreferences"/>

    <Button
        android:id="@+id/Logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/logout"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/profile_line3"/>

    <View
        android:id="@+id/profile_line4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF0000"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/Logout"/>

</androidx.constraintlayout.widget.ConstraintLayout>