<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_red_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/edit_profile"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ralewaybold"
        android:gravity="left"
        android:text="@string/edit_profile"
        android:textAllCaps="true"
        android:textColor="@color/colorBlue"
        android:textSize="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/edit_profile_subtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        android:gravity="left"
        android:text="@string/change_profile_information"
        android:textSize="12dp"
        android:textAllCaps="false"
        android:fontFamily="@font/ralewaybold"
        android:textColor="@color/colorBlueAccent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile"
        app:layout_constraintStart_toStartOf="@+id/edit_profile"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:contentDescription="UserAvatar"
        android:gravity="center"

        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_subtext"
        tools:srcCompat="@tools:sample/avatars" />


    <Button
        android:id="@+id/change_profile_photo"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/change_profile_photo"
        android:textSize="12dp"
        android:textAllCaps="false"
        android:fontFamily="@font/ralewaybold"
        android:textColor="@color/colorBlueAccent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintLeft_toLeftOf="@id/profile_image"
        app:layout_constraintRight_toRightOf="@id/profile_image"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/change_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="left"
        android:text="@string/change_name"
        android:textSize="14dp"
        android:textAllCaps="false"
        android:fontFamily="@font/ralewaybold"
        android:textColor="@color/colorBlue"
        app:layout_constraintTop_toBottomOf="@+id/change_profile_photo"
        app:layout_constraintLeft_toLeftOf="@id/username_input"
        />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_input"
        android:layout_marginTop="0dp"
        android:layout_gravity="center"
        android:hint="@string/name"
        android:inputType="text"
        style="@style/user_text_input"
        android:textSize="14dp"
        android:textColorHint="@color/colorRedAccent"
        app:layout_constraintTop_toBottomOf="@+id/change_username"
        app:layout_constraintLeft_toLeftOf="@id/change_profile_photo"
        app:layout_constraintRight_toRightOf="@id/change_profile_photo"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/change_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/age"
        android:textSize="14dp"
        android:textAllCaps="false"
        android:fontFamily="@font/ralewaybold"
        android:textColor="@color/colorBlue"
        app:layout_constraintTop_toBottomOf="@+id/username_input"
        app:layout_constraintLeft_toLeftOf="@id/age_input"
        />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/age_input"
        android:layout_marginTop="0dp"
        android:layout_gravity="center"
        android:hint="@string/age"
        android:inputType="text"
        style="@style/user_text_input"
        android:textSize="14dp"
        android:textColorHint="@color/colorRedAccent"
        app:layout_constraintTop_toBottomOf="@+id/change_age"
        app:layout_constraintLeft_toLeftOf="@id/change_profile_photo"
        app:layout_constraintRight_toRightOf="@id/change_profile_photo"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/edit_profile_confirm_button"
        style="@style/button_cardview"
        android:layout_marginBottom="80dp"
        app:cardBackgroundColor="@color/colorRed"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_input">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login"
            style="@style/word_button_style"
            android:text="@string/confirm"
            android:textAllCaps="true" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>