<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="tech.sutd.pickupgame.models.UserProfile" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            tools:context=".ui.auth.login.LoginFragment">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_login_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signIn"
                style="@style/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:text="@string/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/background" />

            <View
                android:id="@+id/myRectangleView1"
                style="@style/line"
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_marginStart="76dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signIn" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signUp"
                style="@style/fade_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="102dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/background" />

            <View
                android:id="@+id/myRectangleView2"
                style="@style/fade_header"
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="76dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userId"
                style="@style/user_text_input"
                android:layout_marginTop="68dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@{user.email}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signIn" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwd"
                style="@style/user_text_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@{user.passwd}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userId" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:background="#00FFFFFF"
                android:backgroundTint="#00000000"
                android:fontFamily="@font/ralewaymedium"
                android:padding="0dp"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorBlue"
                android:textSize="12sp"
                app:backgroundTint="#00FFFFFF"
                app:elevation="0dp"
                app:iconPadding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwd"
                app:rippleColor="@color/colorBlueAccent" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/raleway"
                android:text="@string/remember_me"
                app:layout_constraintBottom_toTopOf="@+id/loginCV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password"
                app:layout_constraintVertical_bias="0.15" />


            <androidx.cardview.widget.CardView
                android:id="@+id/loginCV"
                style="@style/button_cardview"
                app:cardBackgroundColor="@color/colorRed"
                app:cardCornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remember_me">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/login"
                    style="@style/word_button_style"
                    android:text="@string/sign_in" />
            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progress"
                style="@style/progressbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>